Fix the alignment of the dialog

--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,7 @@ header {
 }
 
 dialog {
+  z-index: 10;
   top: 100px;
   padding: 1.3rem;
   width: 85%;
